--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI French Poemm Generator.</h1>
+    <h1>Welcome to the AI French Poem Generator.</h1>
     <footer>
       This AI project was coded by
       <a href="https://github.com/JodiS34/" target="_blank"> Jodi L Smith</a> is
