--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI French Poem Generator.</h1>
+    <header>
+      <h1>AI French Poem Generator.</h1>
+    </header>
+    <main>
+      <form action="">
+        <input type="text" placeholder=" Enter the topic of the French poem." />
+        <input type="submit" />
+      </form>
+    </main>
+
     <footer>
       This AI project was coded by
       <a href="https://github.com/JodiS34/" target="_blank"> Jodi L Smith</a> is
