--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     </header>
     <main>
       <form action="">
-        <input type="text" placeholder=" Enter the topic of the French poem." />
+        <input type="text" placeholder=" Enter the topic of the French poem." /
+        autofocus required autocomplete="off"/>
         <input type="submit" />
       </form>
+      <div>
+        La tombe dit à la rose
+
+        <br />
+        Des pleurs dont l’aube t’arrose.
+      </div>
     </main>
 
     <footer>
