--- a/index.html
+++ b/index.html
@@ -7,31 +7,34 @@
     <title>AI Poem Generator</title>
   </head>
   <body>
-    <header>
-      <h1>AI French Poem Generator.</h1>
-    </header>
-    <main>
-      <form action="">
-        <input type="text" placeholder=" Enter the topic of the French poem." /
-        autofocus required autocomplete="off"/>
-        <input type="submit" />
-      </form>
-      <div>
-        La tombe dit à la rose
+    <div class="container">
+      <header>
+        <h1>AI French Poem Generator.</h1>
+      </header>
+      <main>
+        <form action="">
+          <input type="text" placeholder=" Enter the topic of the French poem."
+          / autofocus required autocomplete="off"/>
+          <input type="submit" />
+        </form>
+        <div>
+          La tombe dit à la rose
 
-        <br />
-        Des pleurs dont l’aube t’arrose.
-      </div>
-    </main>
+          <br />
+          Des pleurs dont l’aube t’arrose.
+        </div>
+      </main>
 
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/JodiS34/" target="_blank"> Jodi L Smith</a> is
-      <a href="https://github.com/AI-Poems-Project" target="_blank"
-        >open-sourced on GitHub</a
-      >
-      and is hosted on Netlify.com
-    </footer>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/JodiS34/" target="_blank"> Jodi L Smith</a>
+        is
+        <a href="https://github.com/AI-Poems-Project" target="_blank"
+          >open-sourced on GitHub</a
+        >
+        and is hosted on Netlify.com
+      </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
