--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
       </header>
       <main>
         <form action="">
-          <input type="text" placeholder=" Enter the topic of the French poem."
-          / autofocus required autocomplete="off"/>
+          <input
+            type="text"
+            placeholder=" Enter the topic of the French poem."
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+          />
           <input type="submit" />
         </form>
         <div>
