--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             autocomplete="off"
             class="instructions"
           />
-          <input type="submit" />
+          <input type="submit" class="button" />
         </form>
         <div>
           La tombe dit à la rose
