--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div>
+        <div class="poem">
           La tombe dit à la rose
 
           <br />
