--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>AI French Poem Generator.</h1>
       </header>
       <main>
-        <form action="">
+        <form id="poem- generator-form">
           <input
             type="text"
             placeholder=" Enter the topic of the French poem."
