--- a/index.html
+++ b/index.html
@@ -23,12 +23,7 @@
           />
           <input type="submit" class="submit-button" />
         </form>
-        <div class="poem">
-          La tombe dit à la rose
-
-          <br />
-          Des pleurs dont l’aube t’arrose.
-        </div>
+        <div class="poem" id="poem"></div>
       </main>
 
       <footer>
