--- a/index.html
+++ b/index.html
@@ -14,18 +14,22 @@
         <h1>AI French Poem Generator.</h1>
       </header>
       <main>
-        <form id="poem- generator-form">
-          <input
-            type="text"
-            placeholder=" Enter the topic of the French poem."
-            autofocus
-            required
-            autocomplete="off"
-            class="instructions"
-            id="user-instructions"
-          />
-          <input type="submit" class="submit-button" />
-        </form>
+        <div class="form-container">
+          <form id="poem- generator-form">
+            <input
+              type="text"
+              placeholder=" Enter the topic of a French poem.."
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+              id="user-instructions"
+            />
+            <input type="submit" class="submit-button" />
+          </form>
+          <small>i.e: Flower, Paris, Cheese</small>
+        </div>
+
         <div class="poem" id="poem"></div>
       </main>
 
