--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             />
             <input type="submit" class="submit-button" />
           </form>
-          <small>i.e: Flower, Paris, Cheese</small>
+          <div class="hint">i.e: Flower, Paris or Cheese</div>
         </div>
 
-        <div class="poem" id="poem"></div>
+        <div class="poem hidden" id="poem"></div>
       </main>
 
       <footer>
