--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>AI Poem Generator</title>
   </head>
@@ -15,7 +13,7 @@
       </header>
       <main>
         <div class="form-container">
-          <form id="poem- generator-form">
+          <form id="poem-generator-form">
             <input
               type="text"
               placeholder=" Enter the topic of a French poem.."
@@ -23,7 +21,7 @@
               required
               autocomplete="off"
               class="instructions"
-              id="user-instructions"
+              id="user-instruction"
             />
             <input type="submit" class="submit-button" />
           </form>
@@ -43,6 +41,8 @@
         and is hosted on Netlify.com
       </footer>
     </div>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="src/index.js"></script>
   </body>
 </html>
